feature: update dfdaemon proxy port comment
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/deploy/charts/dragonfly/templates/dfdaemon/dfdaemon-configmap.yaml
+++ b/deploy/charts/dragonfly/templates/dfdaemon/dfdaemon-configmap.yaml
@@ -36,7 +36,7 @@ data:
         namespace: {{ .Values.dfdaemon.config.proxy.tcpListen.namespace }}
     {{- end }}
         listen: {{ .Values.dfdaemon.config.proxy.tcpListen.listen }}
-        port: {{ .Values.dfdaemon.config.proxy.tcpListen.port }}
+        port: {{ .Values.dfdaemon.containerPort }}
       security:
 {{ toYaml .Values.dfdaemon.config.proxy.security | indent 8 }}
       registryMirror:
