feat: build image
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -43,12 +43,17 @@ jobs:
         with:
           version: ${{ env.KIND_VERSION }}
 
+      - name: Build docker image
+        run: |
+          make docker-build-cdn
+          make docker-build-dfdaemon
+          make docker-build-scheduler
+
       - name: Load docker image
         run: |
           make kind-load-cdn-image
           make kind-load-scheduler-image
           make kind-load-dfget-image
-          make kind-load-manager-image
 
       - name: Helm install
         run: |
