--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,7 @@ jobs:
   lint:
     name: Lint
     timeout-minutes: 20
-    strategy:
-      matrix:
-        platform:
-          - ubuntu-latest
-          - macos-latest
-    runs-on: ${{ matrix.platform }}
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -31,12 +26,7 @@ jobs:
   test:
     name: Test
     timeout-minutes: 20
-    strategy:
-      matrix:
-        platform:
-          - ubuntu-latest
-          - macos-latest
-    runs-on: ${{ matrix.platform }}
+    runs-on: ubuntu-latest
     steps:
       - name: Install Go
         uses: actions/setup-go@v2
@@ -59,13 +49,8 @@ jobs:
   build:
     name: Build
     timeout-minutes: 20
-    strategy:
-      matrix:
-        platform:
-          - ubuntu-latest
-          - macos-latest
+    runs-on: ubuntu-latest
     needs: [lint, test]
-    runs-on: ${{ matrix.platform }}
     steps:
       - name: Set up Go
         uses: actions/setup-go@v2
