--- a/deploy/charts/dragonfly/values.yaml
+++ b/deploy/charts/dragonfly/values.yaml
@@ -105,7 +105,7 @@ dfdaemon:
   name: dfdaemon
   nameOverride: ""
   fullnameOverride: ""
-  image: dragonflyoss/dfget
+  image: dragonflyoss/dfdaemon
   tag: v0.1.0-beta
   pullPolicy: IfNotPresent
   resources:
