--- a/deploy/kustomize/single-cluster-openkruise/bases/kustomization.yaml
+++ b/deploy/kustomize/single-cluster-openkruise/bases/kustomization.yaml
@@ -27,7 +27,7 @@ configMapGenerator:
 images:
 - name: dragonflyoss/cdn
   newTag: v0.1.0-beta
-- name: dragonflyoss/dfget
+- name: dragonflyoss/dfdaemon
   newTag: v0.1.0-beta
 - name: dragonflyoss/scheduler
   newTag: v0.1.0-beta
