chore: remove goreleaser go generate
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,6 @@
 before:
   hooks:
     - go mod download
-    - go get github.com/golang/mock/mockgen@v1.6.0
-    - go generate ./...
 
 builds:
   - main: ./cmd/dfget
@@ -51,7 +49,7 @@ archives:
       - docs/*
 
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 
 snapshot:
   name_template: "{{ .Tag }}-next"
@@ -60,8 +58,8 @@ changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+      - "^docs:"
+      - "^test:"
 
 nfpms:
   - id: dfget
