--- a/deploy/charts/dragonfly/templates/cdn/cdn-statefulset.yaml
+++ b/deploy/charts/dragonfly/templates/cdn/cdn-statefulset.yaml
@@ -8,6 +8,7 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "dragonfly.cdn.fullname" . }}
+  namespace: {{ template "dragonfly.namespace" . }}
   {{- if .Values.cdn.statefulsetAnnotations }}
   annotations:
 {{ toYaml .Values.cdn.statefulsetAnnotations | indent 4 }}
