--- a/deploy/charts/dragonfly/templates/jaeger.yaml
+++ b/deploy/charts/dragonfly/templates/jaeger.yaml
@@ -9,6 +9,7 @@ metadata:
     app.kubernetes.io/name: jaeger-all-in-one
     app.kubernetes.io/part-of: jaeger
   name: jaeger-all-in-one
+  namespace: {{ template "dragonfly.namespace" . }}
 
 ---
 
@@ -22,6 +23,7 @@ metadata:
     app.kubernetes.io/name: jaeger-all-in-one-ui-configuration
     app.kubernetes.io/part-of: jaeger
   name: jaeger-all-in-one-ui-configuration
+  namespace: {{ template "dragonfly.namespace" . }}
 data:
   ui: |-
     {
@@ -50,6 +52,7 @@ metadata:
     app.kubernetes.io/name: jaeger-all-in-one-sampling-configuration
     app.kubernetes.io/part-of: jaeger
   name: jaeger-all-in-one-sampling-configuration
+  namespace: {{ template "dragonfly.namespace" . }}
 data:
   sampling: |-
     {
@@ -71,6 +74,7 @@ metadata:
     app.kubernetes.io/name: jaeger-all-in-one-collector
     app.kubernetes.io/part-of: jaeger
   name: jaeger-all-in-one-collector-headless
+  namespace: {{ template "dragonfly.namespace" . }}
 spec:
   clusterIP: None
   ports:
@@ -105,6 +109,7 @@ metadata:
     app.kubernetes.io/name: jaeger-all-in-one-collector
     app.kubernetes.io/part-of: jaeger
   name: jaeger-all-in-one-collector
+  namespace: {{ template "dragonfly.namespace" . }}
 spec:
   ports:
   - name: http-zipkin
@@ -138,6 +143,7 @@ metadata:
     app.kubernetes.io/name: jaeger-all-in-one-query
     app.kubernetes.io/part-of: jaeger
   name: jaeger-all-in-one-query
+  namespace: {{ template "dragonfly.namespace" . }}
 spec:
   ports:
   - name: http-query
@@ -162,6 +168,7 @@ metadata:
     app.kubernetes.io/name: jaeger-all-in-one-agent
     app.kubernetes.io/part-of: jaeger
   name: jaeger-all-in-one-agent
+  namespace: {{ template "dragonfly.namespace" . }}
 spec:
   clusterIP: None
   ports:
@@ -199,6 +206,7 @@ metadata:
     app.kubernetes.io/name: jaeger-all-in-one
     app.kubernetes.io/part-of: jaeger
   name: jaeger-all-in-one
+  namespace: {{ template "dragonfly.namespace" . }}
 spec:
   selector:
     matchLabels:
