--- a/deploy/charts/dragonfly/templates/cdn/cdn-configmap.yaml
+++ b/deploy/charts/dragonfly/templates/cdn/cdn-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "dragonfly.cdn.fullname" . }}
+  namespace: {{ template "dragonfly.namespace" . }}
   labels:
     app: {{ template "dragonfly.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
