--- a/deploy/charts/dragonfly/templates/cdn/cdn-rabc.yaml
+++ b/deploy/charts/dragonfly/templates/cdn/cdn-rabc.yaml
@@ -3,6 +3,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{template "dragonfly.cdn.fullname" . }}-role
+  namespace: {{ template "dragonfly.namespace" . }}
 rules:
 - apiGroups:
   - ""
@@ -21,6 +22,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{template "dragonfly.cdn.fullname" . }}-role-binding
+  namespace: {{ template "dragonfly.namespace" . }}
 roleRef:
   kind: Role
   name: {{template "dragonfly.cdn.fullname" . }}-role
