--- a/deploy/charts/dragonfly/templates/cdn/cdn-serviceaccount.yaml
+++ b/deploy/charts/dragonfly/templates/cdn/cdn-serviceaccount.yaml
@@ -2,3 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{template "dragonfly.cdn.fullname" . }}
+  namespace: {{ template "dragonfly.namespace" . }}
