--- a/deploy/charts/dragonfly/templates/scheduler/scheduler-configmap.yaml
+++ b/deploy/charts/dragonfly/templates/scheduler/scheduler-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "dragonfly.scheduler.fullname" . }}
+  namespace: {{ template "dragonfly.namespace" . }}
   labels:
     app: {{ template "dragonfly.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -26,4 +27,5 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: scheduler-static-cdn
+  namespace: {{ template "dragonfly.namespace" . }}
 {{- end}}
