--- a/deploy/charts/dragonfly/templates/scheduler/scheduler-statefulset.yaml
+++ b/deploy/charts/dragonfly/templates/scheduler/scheduler-statefulset.yaml
@@ -7,8 +7,8 @@ metadata:
     component: "{{ .Values.scheduler.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-  namespace: {{ .Values.installation.namespace }}
   name: {{ template "dragonfly.scheduler.fullname" . }}
+  namespace: {{ template "dragonfly.namespace" . }}
   {{- if .Values.scheduler.statefulsetAnnotations }}
   annotations:
 {{ toYaml .Values.scheduler.statefulsetAnnotations | indent 4 }}
