--- a/deploy/charts/dragonfly/templates/dfdaemon/dfdaemon-configmap.yaml
+++ b/deploy/charts/dragonfly/templates/dfdaemon/dfdaemon-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "dragonfly.dfdaemon.fullname" . }}
-  namespace: {{ .Values.installation.namespace }}
+  namespace: {{ template "dragonfly.namespace" . }}
   labels:
     app: {{ template "dragonfly.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -17,14 +17,14 @@ data:
     {{- if .Values.dfdaemon.config.jaeger }}
     jaeger: {{ .Values.dfdaemon.config.jaeger }}
     {{- else if .Values.installation.jaeger }}
-    jaeger: http://jaeger-all-in-one-collector.{{ $.Values.installation.namespace }}.svc{{ $.Values.installation.clusterDomain }}:14268/api/traces
+    jaeger: http://jaeger-all-in-one-collector.{{ template "dragonfly.namespace" $ }}.svc{{ $.Values.installation.clusterDomain }}:14268/api/traces
     {{- end }}
     scheduler:
       netAddrs:
       {{- $count := .Values.scheduler.replicas | int}}
       {{- range $i, $x := until $count }}
       - type: tcp
-        addr: {{template "dragonfly.scheduler.fullname" $ }}-{{$i}}.{{ $.Values.installation.namespace }}.svc{{ $.Values.installation.clusterDomain }}:{{ $.Values.scheduler.service.port }}
+        addr: {{template "dragonfly.scheduler.fullname" $ }}-{{$i}}.{{ template "dragonfly.namespace" $ }}.svc{{ $.Values.installation.clusterDomain }}:{{ $.Values.scheduler.service.port }}
       {{- end }}
       scheduleTimeout: 5m
     host:
