--- a/deploy/charts/dragonfly/templates/scheduler/scheduler-svc.yaml
+++ b/deploy/charts/dragonfly/templates/scheduler/scheduler-svc.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "dragonfly.scheduler.fullname" $ }}-{{$i}}
-  namespace: {{ $.Values.installation.namespace }}
+  namespace: {{ template "dragonfly.namespace" $ }}
   labels:
     app: {{ template "dragonfly.name" $ }}
     chart: {{ $.Chart.Name }}-{{ $.Chart.Version }}
