feature: add default filter in proxy for deployment and docs
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/deploy/charts/dragonfly/templates/dfdaemon/dfdaemon-configmap.yaml
+++ b/deploy/charts/dragonfly/templates/dfdaemon/dfdaemon-configmap.yaml
@@ -36,6 +36,7 @@ data:
     storage:
 {{ toYaml .Values.dfdaemon.config.storage | indent 6 }}
     proxy:
+      defaultFilter: {{ .Values.dfdaemon.config.proxy.defaultFilter }}
       tcpListen:
     {{- if not .Values.dfdaemon.hostNetwork }}
         namespace: {{ .Values.dfdaemon.config.proxy.tcpListen.namespace }}
