--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -62,4 +62,6 @@ jobs:
           helm install -n dragonfly-system dragonfly ./deploy/charts/dragonfly
 
       - name: Wait for running
-        run: kubectl -n dragonfly-system wait --for=condition=ready --all --timeout=10m pod
+        run: |
+          kubectl -n dragonfly-system wait --for=condition=ready --all --timeout=10m pod
+          kubectl get po -n dragonfly-system
