--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,9 +2,9 @@ name: E2E Test
 
 on:
   push:
-    branches: [ main, release-*, feature/e2e ]
+    branches: [main, release-*, feature/e2e]
   pull_request:
-    branches: [ main, release-*, feature/e2e ]
+    branches: [main, release-*, feature/e2e]
 
 env:
   GO_VERSION: 1.15
@@ -38,11 +38,12 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v2
-      
+
       - name: Setup Kind
         uses: engineerd/setup-kind@v0.5.0
         with:
           version: ${{ env.KIND_VERSION }}
+          config: ./test/kind.yaml
 
       - name: Build docker image
         run: |
@@ -65,4 +66,5 @@ jobs:
 
       - name: down
         run: |
+          curl http://127.0.0.1:65001
           curl -x http://127.0.0.1:65001 http://github.com/dragonflyoss/Dragonfly2/blob/main/README.md
