feat: create namespace
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -55,9 +55,8 @@ jobs:
 
       - name: Helm install
         run: |
-          kubectl create ns dragonfly-system
           helm lint ./deploy/charts/dragonfly
-          helm install -n dragonfly-system dragonfly ./deploy/charts/dragonfly
+          helm install -n dragonfly-system --create-namespace dragonfly ./deploy/charts/dragonfly
 
       - name: Wait for running
         run: |
