--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -56,14 +56,19 @@ jobs:
       - name: Helm install
         run: |
           helm lint ./deploy/charts/dragonfly
-          helm install -n dragonfly-system --create-namespace dragonfly ./deploy/charts/dragonfly
+          helm install --create-namespace -n dragonfly-system dragonfly ./deploy/charts/dragonfly
 
       - name: Wait for running
         run: |
           kubectl -n dragonfly-system wait --for=condition=ready --all --timeout=10m pod
           kubectl get po -n dragonfly-system
 
-      - name: down
-        run: |
-          curl http://127.0.0.1:65001
-          curl -x http://127.0.0.1:65001 http://github.com/dragonflyoss/Dragonfly2/blob/main/README.md
+      - name: Run E2E tests
+        run: make e2e-test-coverage
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.txt
+          flags: e2etests
