--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -39,6 +39,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
+
       - name: Setup Kind
         uses: engineerd/setup-kind@v0.5.0
         with:
