--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Get dependencies
         run: |
-          go get -v -t -d ./...
+          go install github.com/onsi/ginkgo/ginkgo
 
       - name: Setup Kind
         uses: engineerd/setup-kind@v0.5.0
