--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -42,8 +42,7 @@ jobs:
 
       - name: Get dependencies
         run: |
-          go get -v -t -d ./...
-          go get github.com/onsi/ginkgo/ginkgo
+          sudo go get github.com/onsi/ginkgo/ginkgo
 
       - name: Set up containerd
         uses: crazy-max/ghaction-setup-containerd@v1
