--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -11,7 +11,6 @@ env:
   KIND_VERSION: v0.11.1
   CONTAINERD_VERSION: v1.5.2
   GOPROXY: https://goproxy.io,direct
-  CRICTL_VERSION: v1.21.0
 
 jobs:
   skip_check:
@@ -53,9 +52,9 @@ jobs:
 
       - name: Set up crictl
         run: |
-          wget https://github.com/kubernetes-sigs/cri-tools/releases/download/$VERSION/crictl-$CRICTL_VERSION-linux-amd64.tar.gz
-          sudo tar zxvf crictl-$CRICTL_VERSION-linux-amd64.tar.gz -C /usr/local/bin
-          rm -f crictl-$CRICTL_VERSION-linux-amd64.tar.gz
+          wget https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.21.0/crictl-v1.21.0-linux-amd64.tar.gz
+          sudo tar zxvf crictl-v1.21.0-linux-amd64.tar.gz -C /usr/local/bin
+          rm -f crictl-v1.21.0-linux-amd64.tar.gz
 
       - name: Setup Kind
         uses: engineerd/setup-kind@v0.5.0
