--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -62,10 +62,6 @@ jobs:
           version: ${{ env.KIND_VERSION }}
           config: ./test/testdata/kind/config.yaml
 
-      - name: pull docker image
-        run: |
-          crictl --runtime-endpoint=unix:///run/containerd/containerd.sock pull docker.io/library/busybox:latest
-
       - name: Build docker image
         run: |
           make docker-build
@@ -81,6 +77,10 @@ jobs:
 
       - name: Wait for running
         run: kubectl -n dragonfly-system wait --for=condition=ready --all --timeout=10m pod
+
+      - name: pull docker image
+        run: |
+          crictl --runtime-endpoint=unix:///run/containerd/containerd.sock --debug pull docker.io/library/busybox:latest
 
       - name: Run E2E tests
         run: make e2e-test-coverage
