--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -56,7 +56,7 @@ jobs:
           sudo tar zxvf crictl-v1.21.0-linux-amd64.tar.gz -C /usr/local/bin
           sudo mv ./test/testdata/crictl/config.yaml /etc/crictl.yaml
           rm -f crictl-v1.21.0-linux-amd64.tar.gz
-          crictl --debug pull docker.io/library/busybox:latest
+          sudo crictl --debug pull docker.io/library/busybox:latest
 
       - name: Setup Kind
         uses: engineerd/setup-kind@v0.5.0
