--- a/deploy/charts/dragonfly/templates/scheduler/scheduler-statefulset.yaml
+++ b/deploy/charts/dragonfly/templates/scheduler/scheduler-statefulset.yaml
@@ -27,10 +27,13 @@ spec:
         app: {{ template "dragonfly.scheduler.fullname" . }}
         component: "{{ .Values.scheduler.name }}"
         release: {{ .Release.Name }}
-        {{- if .Values.scheduler.podAnnotations }}
+        {{- if .Values.scheduler.podLabels }}
+{{ toYaml .Values.scheduler.podLabels | indent 8 }}
+        {{- end }}
+      {{- if .Values.scheduler.podAnnotations }}
       annotations:
 {{ toYaml .Values.scheduler.podAnnotations | indent 8 }}
-        {{- end }}
+      {{- end }}
     spec:
       {{- if .Values.scheduler.nodeSelector }}
       nodeSelector:
