feat: protocol tcp
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/test/testdata/kind/config.yaml
+++ b/test/testdata/kind/config.yaml
@@ -6,6 +6,7 @@ nodes:
     extraPortMappings:
       - containerPort: 65001
         hostPort: 65001
+        protocol: TCP
     extraMounts:
       - hostPath: ./test/testdata/containerd/config.toml
         containerPath: /etc/containerd/config.toml
