--- a/test/testdata/containerd/config.toml
+++ b/test/testdata/containerd/config.toml
@@ -1,66 +1,37 @@
-root = "/var/lib/containerd"
-state = "/run/containerd"
-oom_score = 0
-imports = ["/etc/containerd/runtime_*.toml", "./debug.toml"]
-
-[grpc]
-  address = "/run/containerd/containerd.sock"
-  uid = 0
-  gid = 0
+# explicitly use v2 config format
+version = 2
 
 [debug]
-  address = "/run/containerd/debug.sock"
-  uid = 0
-  gid = 0
-  level = "info"
+  level = "debug"
 
-[metrics]
-  address = ""
-  grpc_histogram = false
+[plugins."io.containerd.grpc.v1.cri".containerd]
+  # save disk space when using a single snapshotter
+  discard_unpacked_layers = true
+  # explicitly use default snapshotter so we can sed it in entrypoint
+  snapshotter = "overlayfs"
+  # explicit default here, as we're configuring it below
+  default_runtime_name = "runc"
+[plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
+  # set default runtime handler to v2, which has a per-pod shim
+  runtime_type = "io.containerd.runc.v2"
 
-[cgroup]
-  path = ""
+# Setup a runtime with the magic name ("test-handler") used for Kubernetes
+# runtime class tests ...
+[plugins."io.containerd.grpc.v1.cri".containerd.runtimes.test-handler]
+  runtime_type = "io.containerd.runc.v2"
 
-[plugins]
-  [plugins.cgroups]
-    no_prometheus = false
-  [plugins.diff]
-    default = ["walking"]
-  [plugins.linux]
-    shim = "containerd-shim"
-    runtime = "runc"
-    runtime_root = ""
-    no_shim = false
-    shim_debug = false
-  [plugins.scheduler]
-    pause_threshold = 0.02
-    deletion_threshold = 0
-    mutation_threshold = 100
-    schedule_delay = 0
-    startup_delay = "100ms"
-  [plugins.cri]
-    stream_server_address = ""
-    stream_server_port = "10010"
-    enable_selinux = false
-    sandbox_image = "k8s.gcr.io/pause:3.1"
-    stats_collect_period = 10
-    systemd_cgroup = false
-    enable_tls_streaming = false
-    [plugins.cri.containerd]
-      snapshotter = "overlayfs"
-      [plugins.cri.containerd.default_runtime]
-        runtime_type = "io.containerd.runtime.v1.linux"
-        runtime_engine = ""
-        runtime_root = ""
-      [plugins.cri.containerd.untrusted_workload_runtime]
-        runtime_type = ""
-        runtime_engine = ""
-        runtime_root = ""
-    [plugins.cri.cni]
-      bin_dir = "/opt/cni/bin"
-      conf_dir = "/etc/cni/net.d"
-      conf_template = ""
-    [plugins.cri.registry]
-      [plugins.cri.registry.mirrors]
-        [plugins.cri.registry.mirrors."docker.io"]
-          endpoint = ["http://127.0.0.1:65001"]
+[plugins."io.containerd.grpc.v1.cri"]
+  # use fixed sandbox image
+  sandbox_image = "k8s.gcr.io/pause:3.5"
+  # allow hugepages controller to be missing
+  # see https://github.com/containerd/cri/pull/1501
+  tolerate_missing_hugepages_controller = true
+  # restrict_oom_score_adj needs to be true when running inside UserNS (rootless)
+  restrict_oom_score_adj = false
+
+# Mirrors use d7y.io instead of docker.io.
+# when using docker.io to generate an endpoint, https://registry-1.docker.io will be returned by default.
+# https://github.com/containerd/containerd/blob/main/pkg/cri/server/image_pull.go#L456
+# https://github.com/containerd/containerd/blob/main/remotes/docker/resolver.go#L121
+[plugins."io.containerd.grpc.v1.cri".registry.mirrors."d7y.io"]
+  endpoint = ["http://127.0.0.1:65001"]
