--- a/test/testdata/kind/config.yaml
+++ b/test/testdata/kind/config.yaml
@@ -4,6 +4,9 @@ nodes:
   - role: control-plane
     image: kindest/node:v1.21.1
     extraPortMappings:
+      - containerPort: 65001
+        hostPort: 65001
+        protocol: TCP
     extraMounts:
       - hostPath: ./test/testdata/containerd/config.toml
         containerPath: /etc/containerd/config.toml
