--- a/scheduler/config/testdata/scheduler.yaml
+++ b/scheduler/config/testdata/scheduler.yaml
@@ -5,24 +5,29 @@ dynconfig:
   cachePath: bar
   addr: 127.0.0.1:8002
   cdnDirPath: tmp
+
 scheduler:
   abtest: true
   ascheduler: "a-scheduler"
   bscheduler: "b-scheduler"
+
 server:
   ip: "127.0.0.1"
   port: 8002
+
 worker:
   workerNum: 8
   workerJobPoolSize: 10000
   senderNum: 10
   senderJobPoolSize: 10000
+
 cdn:
   servers:
     - name: "cdn"
       ip: "127.0.0.1"
       rpcPort: 8003
       downloadPort: 8001
+
 gc:
   taskDelay: 3600000
   peerTaskDelay: 3600000
@@ -35,3 +40,7 @@ manager:
     retryMaxAttempts: 100
     retryInitBackOff: 100
     retryMaxBackOff: 100
+
+host:
+  idc: foo
+  location: bar
